--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "[![Tests](https://github.com/OlgaAkhlamova/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/OlgaAkhlamova/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.com/OlgaAkhlamova/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/OlgaAkhlamova/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
