--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/OlgaAkhlamova/express-mesto-gha#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
